# agentforge

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentforge/: __init__.py  config.py
agentforge/agents/: architecture.py  autofix.py  base.py  correctness.py  performance.py  router.py  security.py  synthesizer.py
agentforge/api/: app.py  logging_config.py  middleware.py
agentforge/api/routes/: feedback.py  review.py  webhook.py
agentforge/cli/: main.py
agentforge/graph/: workflow.py
agentforge/models/: database.py  schemas.py
agentforge/rag/: import_resolver.py  indexer.py  retriever.py
agentforge/services/: github_client.py  review_service.py
dashboard/: app.py
samples/: vulnerable_app.py
tests/: conftest.py  test_api.py  test_autofix.py  test_cli.py  test_database.py  test_import_resolver.py  test_integration.py  test_middleware.py  test_review_service.py  test_schemas.py
